--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
-      - Now it is
+      - name: Now it is
         run: |
           date
-      - Directory content
+      - name: Directory content
         run: |
           ls -l
