--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,8 +15,8 @@ jobs:
           node-version: '12.x'
       - name: npm install
         run: npm install
-      - name: lint
-        run: npm run eslint
+      # - name: lint
+      #   run: npm run eslint
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
